--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Fabiano Lecce Blogg"
+author: "Fabiano lecce"
+description: "Full-stack developer. Working in C# and Angular. Passion for architectures, clean code and patterns." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "fabiano@lecce.dev"
+github_username: "flecce"
+linkedin_username: "fabiano-lecce"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
