--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Fabiano Lecce Blogg"
+title: "Fabiano Lecce Blog"
 author: "Fabiano lecce"
-description: "Full-stack developer. Working in C# and Angular. Passion for architectures, clean code and patterns." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Full-stack developer. Working in C# and Angular. Passion for architectures, clean code and patterns."
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
