Angular SSR post

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Full-stack developer. Working in C# and Angular. Passion for archi
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "fabiano@lecce.dev"
+email: "fabiano[at]lecce.dev"
 github_username: "flecce"
 linkedin_username: "fabiano-lecce"
 #facebook_username: username
